Improve links in intro tutorial

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-09 Do 15:48 -->
+<!-- 2021-09-09 Do 17:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Comprehensive APDL-Mode Documentation</title>
@@ -248,20 +248,20 @@ for the JavaScript code in this tag.
 </div><div id="content">
 <h1 class="title">The Comprehensive APDL-Mode Documentation</h1>
 
-<div id="outline-container-org0093aa8" class="outline-2">
-<h2 id="org0093aa8"><span class="section-number-2">1</span> Introduction</h2>
+<div id="outline-container-orgbbee310" class="outline-2">
+<h2 id="orgbbee310"><span class="section-number-2">1</span> Introduction</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-HTML: <a href="README.html">README.org</a>
+HTML: <a href="info/README.html">README</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orged0d9b8" class="outline-2">
-<h2 id="orged0d9b8"><span class="section-number-2">2</span> Tutorials</h2>
+<div id="outline-container-org3be2c09" class="outline-2">
+<h2 id="org3be2c09"><span class="section-number-2">2</span> Tutorials</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org5032621" class="outline-3">
-<h3 id="org5032621"><span class="section-number-3">2.1</span> Introductory</h3>
+<div id="outline-container-orge4af037" class="outline-3">
+<h3 id="orge4af037"><span class="section-number-3">2.1</span> Introductory</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 APDL-Mode introductory tutorial
@@ -272,8 +272,8 @@ APDL-Mode introductory tutorial
 </ul>
 </div>
 </div>
-<div id="outline-container-orgfb93846" class="outline-3">
-<h3 id="orgfb93846"><span class="section-number-3">2.2</span> In-depth</h3>
+<div id="outline-container-org5eed451" class="outline-3">
+<h3 id="org5eed451"><span class="section-number-3">2.2</span> In-depth</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>HTML: <a href="doc/A-M_in-depth_tutorial.html">In-depth Tutorial</a></li>
@@ -281,8 +281,8 @@ APDL-Mode introductory tutorial
 </div>
 </div>
 </div>
-<div id="outline-container-orge4c1427" class="outline-2">
-<h2 id="orge4c1427"><span class="section-number-2">3</span> Reference Manuals</h2>
+<div id="outline-container-org1809430" class="outline-2">
+<h2 id="org1809430"><span class="section-number-2">3</span> Reference Manuals</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>HTML: The Apdl-Mode <a href="doc/A-M_APDL_reference.html">Highlighting and APDL reference</a>.</li>
