--- a/info/TODO.html
+++ b/info/TODO.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-09 Do 15:48 -->
+<!-- 2021-09-09 Do 17:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -272,19 +272,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org06503eb">1. <span class="todo TODO">TODO</span> Version 20.6.0</a></li>
-<li><a href="#orgeae9ced">2. <span class="done DONE">DONE</span> Version 20.5.0</a></li>
-<li><a href="#org168bda9">3. <span class="done DONE">DONE</span> Version 20.4.0</a></li>
-<li><a href="#orgbf0ad65">4. <span class="done DONE">DONE</span> Version 20.3.0</a></li>
-<li><a href="#org225d04c">5. <span class="done DONE">DONE</span> Version 20.2.0</a></li>
-<li><a href="#orga289ef5">6. <span class="done DONE">DONE</span> Version 20.1.1</a></li>
-<li><a href="#org76793ec">7. Version 162-2</a></li>
+<li><a href="#org734e80c">1. <span class="todo TODO">TODO</span> Version 20.6.0</a></li>
+<li><a href="#orge56c8ec">2. <span class="done DONE">DONE</span> Version 20.5.0</a></li>
+<li><a href="#org6199140">3. <span class="done DONE">DONE</span> Version 20.4.0</a></li>
+<li><a href="#orgd47b8c7">4. <span class="done DONE">DONE</span> Version 20.3.0</a></li>
+<li><a href="#org7fe1766">5. <span class="done DONE">DONE</span> Version 20.2.0</a></li>
+<li><a href="#orgbbba238">6. <span class="done DONE">DONE</span> Version 20.1.1</a></li>
+<li><a href="#orge48be24">7. Version 162-2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org06503eb" class="outline-2">
-<h2 id="org06503eb"><span class="section-number-2">1</span> <span class="todo TODO">TODO</span> Version 20.6.0</h2>
+<div id="outline-container-org734e80c" class="outline-2">
+<h2 id="org734e80c"><span class="section-number-2">1</span> <span class="todo TODO">TODO</span> Version 20.6.0</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Melpa: <span class="timestamp-wrapper"><span class="timestamp">[2021-08-09 Mo] </span></span> 481
@@ -294,8 +294,8 @@ Melpa: <span class="timestamp-wrapper"><span class="timestamp">[2021-08-09 Mo] <
 Melpa: <span class="timestamp-wrapper"><span class="timestamp">[2020-10-24 Sa] </span></span> 396 downloads
 </p>
 </div>
-<div id="outline-container-org0d77679" class="outline-3">
-<h3 id="org0d77679"><span class="section-number-3">1.1</span> Todos, bugs</h3>
+<div id="outline-container-orgca0fbef" class="outline-3">
+<h3 id="orgca0fbef"><span class="section-number-3">1.1</span> Todos, bugs</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>APDL reference is incomplete</li>
@@ -308,8 +308,8 @@ usage.org
 </ul>
 </div>
 </div>
-<div id="outline-container-org188fcb7" class="outline-3">
-<h3 id="org188fcb7"><span class="section-number-3">1.2</span> Issues</h3>
+<div id="outline-container-orgcdbdf85" class="outline-3">
+<h3 id="orgcdbdf85"><span class="section-number-3">1.2</span> Issues</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>Discovery Aim is obsolete</li>
@@ -333,8 +333,8 @@ f,node(x,y,z),,,</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org233bbf4" class="outline-3">
-<h3 id="org233bbf4"><span class="section-number-3">1.3</span> Checks</h3>
+<div id="outline-container-org3984859" class="outline-3">
+<h3 id="org3984859"><span class="section-number-3">1.3</span> Checks</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>Changed file size without warning to 30 MB what is Emacs-26
@@ -344,8 +344,8 @@ using?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4aad140" class="outline-3">
-<h3 id="org4aad140"><span class="section-number-3">1.4</span> Wishes</h3>
+<div id="outline-container-org98c224f" class="outline-3">
+<h3 id="org98c224f"><span class="section-number-3">1.4</span> Wishes</h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li>A better Info index</li>
@@ -357,8 +357,8 @@ all.</li>
 <li>Help system and docu, rather complete, except online docu</li>
 </ul>
 </div>
-<div id="outline-container-org78973cc" class="outline-4">
-<h4 id="org78973cc"><span class="section-number-4">1.4.1</span> Docu</h4>
+<div id="outline-container-org5f810ba" class="outline-4">
+<h4 id="org5f810ba"><span class="section-number-4">1.4.1</span> Docu</h4>
 <div class="outline-text-4" id="text-1-4-1">
 <p>
 Outdated menus in A-M-introductory<sub>tutorial.org</sub>
@@ -444,8 +444,8 @@ MD
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc4a0b73" class="outline-4">
-<h4 id="orgc4a0b73"><span class="section-number-4">1.4.2</span> templates</h4>
+<div id="outline-container-orgef1581b" class="outline-4">
+<h4 id="orgef1581b"><span class="section-number-4">1.4.2</span> templates</h4>
 <div class="outline-text-4" id="text-1-4-2">
 <ul class="org-ul">
 <li><p>
@@ -468,8 +468,8 @@ include ARG[1-9] optionally?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga7a3540" class="outline-4">
-<h4 id="orga7a3540"><span class="section-number-4">1.4.3</span> misc</h4>
+<div id="outline-container-org4239d73" class="outline-4">
+<h4 id="org4239d73"><span class="section-number-4">1.4.3</span> misc</h4>
 <div class="outline-text-4" id="text-1-4-3">
 <ol class="org-ol">
 <li>make <b>License</b> buffers read-only</li>
@@ -483,8 +483,8 @@ include ARG[1-9] optionally?</li>
 </div>
 </div>
 
-<div id="outline-container-org4ea9076" class="outline-3">
-<h3 id="org4ea9076"><span class="section-number-3">1.5</span> Done</h3>
+<div id="outline-container-org290d53a" class="outline-3">
+<h3 id="org290d53a"><span class="section-number-3">1.5</span> Done</h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li>Make text around #+texinfo: lines self sustained!</li>
@@ -493,8 +493,8 @@ include ARG[1-9] optionally?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org39795a2" class="outline-3">
-<h3 id="org39795a2"><span class="section-number-3">1.6</span> Push and Release Proceedures</h3>
+<div id="outline-container-org74f14ad" class="outline-3">
+<h3 id="org74f14ad"><span class="section-number-3">1.6</span> Push and Release Proceedures</h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li>make PACK : now obligatory for any push!!</li>
@@ -560,8 +560,8 @@ APDL<sub>PATCH</sub> := 0
 </div>
 </div>
 
-<div id="outline-container-orgeae9ced" class="outline-2">
-<h2 id="orgeae9ced"><span class="section-number-2">2</span> <span class="done DONE">DONE</span> Version 20.5.0</h2>
+<div id="outline-container-orge56c8ec" class="outline-2">
+<h2 id="orge56c8ec"><span class="section-number-2">2</span> <span class="done DONE">DONE</span> Version 20.5.0</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-05-01 Fr]</span></span>
@@ -569,8 +569,8 @@ help for all get- and parametric-functions
 </p>
 </div>
 </div>
-<div id="outline-container-org168bda9" class="outline-2">
-<h2 id="org168bda9"><span class="section-number-2">3</span> <span class="done DONE">DONE</span> Version 20.4.0</h2>
+<div id="outline-container-org6199140" class="outline-2">
+<h2 id="org6199140"><span class="section-number-2">3</span> <span class="done DONE">DONE</span> Version 20.4.0</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-04-01 Mi]</span></span>
@@ -578,8 +578,8 @@ updated to 2020R1
 </p>
 </div>
 </div>
-<div id="outline-container-orgbf0ad65" class="outline-2">
-<h2 id="orgbf0ad65"><span class="section-number-2">4</span> <span class="done DONE">DONE</span> Version 20.3.0</h2>
+<div id="outline-container-orgd47b8c7" class="outline-2">
+<h2 id="orgd47b8c7"><span class="section-number-2">4</span> <span class="done DONE">DONE</span> Version 20.3.0</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-03-24 Di]</span></span>
@@ -588,16 +588,16 @@ feature freeze <span class="timestamp-wrapper"><span class="timestamp">[2020-03-
 </p>
 </div>
 </div>
-<div id="outline-container-org225d04c" class="outline-2">
-<h2 id="org225d04c"><span class="section-number-2">5</span> <span class="done DONE">DONE</span> Version 20.2.0</h2>
+<div id="outline-container-org7fe1766" class="outline-2">
+<h2 id="org7fe1766"><span class="section-number-2">5</span> <span class="done DONE">DONE</span> Version 20.2.0</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-03-10 Di]</span></span>
 </p>
 </div>
 </div>
-<div id="outline-container-orga289ef5" class="outline-2">
-<h2 id="orga289ef5"><span class="section-number-2">6</span> <span class="done DONE">DONE</span> Version 20.1.1</h2>
+<div id="outline-container-orgbbba238" class="outline-2">
+<h2 id="orgbbba238"><span class="section-number-2">6</span> <span class="done DONE">DONE</span> Version 20.1.1</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>are the material properties documented, matlib?  Matlib is used
@@ -611,12 +611,12 @@ Done in matlib/README.org</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org76793ec" class="outline-2">
-<h2 id="org76793ec"><span class="section-number-2">7</span> Version 162-2</h2>
+<div id="outline-container-orge48be24" class="outline-2">
+<h2 id="orge48be24"><span class="section-number-2">7</span> Version 162-2</h2>
 <div class="outline-text-2" id="text-7">
 </div>
-<div id="outline-container-org4381150" class="outline-3">
-<h3 id="org4381150"><span class="section-number-3">7.1</span> Bugs</h3>
+<div id="outline-container-orgeb366b4" class="outline-3">
+<h3 id="orgeb366b4"><span class="section-number-3">7.1</span> Bugs</h3>
 <div class="outline-text-3" id="text-7-1">
 <ul class="org-ul">
 <li>Hmm, it's gone?  C-c C-s first time visit: User variables
@@ -641,8 +641,8 @@ Structural)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1e59fac" class="outline-3">
-<h3 id="org1e59fac"><span class="section-number-3">7.2</span> Wish-list</h3>
+<div id="outline-container-org487f59d" class="outline-3">
+<h3 id="org487f59d"><span class="section-number-3">7.2</span> Wish-list</h3>
 <div class="outline-text-3" id="text-7-2">
 <ul class="org-ul">
 <li>-send-to-ansys, -send-above copy empty regions or only comments</li>
@@ -759,8 +759,8 @@ self-documenting help system for a template function</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2a92abb" class="outline-3">
-<h3 id="org2a92abb"><span class="section-number-3">7.3</span> Freeze</h3>
+<div id="outline-container-org4fedb90" class="outline-3">
+<h3 id="org4fedb90"><span class="section-number-3">7.3</span> Freeze</h3>
 <div class="outline-text-3" id="text-7-3">
 <ul class="org-ul">
 <li>Documentation of installation, usage and configuration!
@@ -773,8 +773,8 @@ self-documenting help system for a template function</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org696cb5b" class="outline-3">
-<h3 id="org696cb5b"><span class="section-number-3">7.4</span> Deficiencies:</h3>
+<div id="outline-container-orgf51ffba" class="outline-3">
+<h3 id="orgf51ffba"><span class="section-number-3">7.4</span> Deficiencies:</h3>
 <div class="outline-text-3" id="text-7-4">
 <dl class="org-dl">
 <dt>Highlighting</dt><dd>Experimental user variable highlighting
@@ -812,8 +812,8 @@ is only inserted upcased.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgb33ccd8" class="outline-3">
-<h3 id="orgb33ccd8"><span class="section-number-3">7.5</span> Procedures</h3>
+<div id="outline-container-org0779931" class="outline-3">
+<h3 id="org0779931"><span class="section-number-3">7.5</span> Procedures</h3>
 <div class="outline-text-3" id="text-7-5">
 <dl class="org-dl">
 <dt>GNU-Linux</dt><dd>instead of GNU/Linux as FSF suggesting ;-)</dd>
@@ -832,8 +832,8 @@ GH-wiki is repo with write access for world, separate from the A-M repo!
 </div>
 </div>
 
-<div id="outline-container-orgc65d93e" class="outline-3">
-<h3 id="orgc65d93e"><span class="section-number-3">7.6</span> Freeze proceedures</h3>
+<div id="outline-container-org6ab4e1a" class="outline-3">
+<h3 id="org6ab4e1a"><span class="section-number-3">7.6</span> Freeze proceedures</h3>
 <div class="outline-text-3" id="text-7-6">
 <ul class="org-ul">
 <li>check whether all undocumented commands
@@ -892,8 +892,8 @@ Emacs cycle)?</li>
 </div>
 </div>
 
-<div id="outline-container-org14a0a36" class="outline-3">
-<h3 id="org14a0a36"><span class="section-number-3">7.7</span> Release</h3>
+<div id="outline-container-org3cbb653" class="outline-3">
+<h3 id="org3cbb653"><span class="section-number-3">7.7</span> Release</h3>
 <div class="outline-text-3" id="text-7-7">
 <ul class="org-ul">
 <li>Add the latest news from NEWS.org to the README.org</li>
@@ -929,12 +929,12 @@ Dieter
 </div>
 </div>
 
-<div id="outline-container-orga5400a8" class="outline-3">
-<h3 id="orga5400a8"><span class="section-number-3">7.8</span> Ideas for further versions</h3>
+<div id="outline-container-org8282cf0" class="outline-3">
+<h3 id="org8282cf0"><span class="section-number-3">7.8</span> Ideas for further versions</h3>
 <div class="outline-text-3" id="text-7-8">
 </div>
-<div id="outline-container-org47ba0ca" class="outline-4">
-<h4 id="org47ba0ca"><span class="section-number-4">7.8.1</span> Parameter help and documentation</h4>
+<div id="outline-container-orga4b274c" class="outline-4">
+<h4 id="orga4b274c"><span class="section-number-4">7.8.1</span> Parameter help and documentation</h4>
 <div class="outline-text-4" id="text-7-8-1">
 <ul class="org-ul">
 <li>Enable a mouse button to unhide hidden regions, enable an
@@ -978,8 +978,8 @@ their help strings of parameter help.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org3ca847f" class="outline-4">
-<h4 id="org3ca847f"><span class="section-number-4">7.8.2</span> Ansys process and interpreter buffer</h4>
+<div id="outline-container-org1eff6cd" class="outline-4">
+<h4 id="org1eff6cd"><span class="section-number-4">7.8.2</span> Ansys process and interpreter buffer</h4>
 <div class="outline-text-4" id="text-7-8-2">
 <p>
 example: gnuplot-mode
@@ -1040,8 +1040,8 @@ ansys lock file before starting a run</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org8253d43" class="outline-4">
-<h4 id="org8253d43"><span class="section-number-4">7.8.3</span> Skeletons, outline and abbrevs</h4>
+<div id="outline-container-org8a0a025" class="outline-4">
+<h4 id="org8a0a025"><span class="section-number-4">7.8.3</span> Skeletons, outline and abbrevs</h4>
 <div class="outline-text-4" id="text-7-8-3">
 <ul class="org-ul">
 <li>show a preview buffer with the outline headlines</li>
@@ -1075,8 +1075,8 @@ must *go:label be unambiguous?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgbb1654f" class="outline-4">
-<h4 id="orgbb1654f"><span class="section-number-4">7.8.4</span> Miscellaneous</h4>
+<div id="outline-container-orgf2709f6" class="outline-4">
+<h4 id="orgf2709f6"><span class="section-number-4">7.8.4</span> Miscellaneous</h4>
 <div class="outline-text-4" id="text-7-8-4">
 <ul class="org-ul">
 <li>hash or signature file for packages</li>
@@ -1167,8 +1167,8 @@ programming).</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org596e240" class="outline-4">
-<h4 id="org596e240"><span class="section-number-4">7.8.5</span> Ansys syntax restrictions not (yet) accounted for</h4>
+<div id="outline-container-org9b01478" class="outline-4">
+<h4 id="org9b01478"><span class="section-number-4">7.8.5</span> Ansys syntax restrictions not (yet) accounted for</h4>
 <div class="outline-text-4" id="text-7-8-5">
 <ul class="org-ul">
 <li>Parentheses can only be nested 4 levels deep and only up to 9
@@ -1185,8 +1185,8 @@ with /INPUT and *USE)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org62421b3" class="outline-4">
-<h4 id="org62421b3"><span class="section-number-4">7.8.6</span> Unknown Ansys stuff</h4>
+<div id="outline-container-org8b9dc01" class="outline-4">
+<h4 id="org8b9dc01"><span class="section-number-4">7.8.6</span> Unknown Ansys stuff</h4>
 <div class="outline-text-4" id="text-7-8-6">
 <ul class="org-ul">
 <li>what the heck is the *UILIST command?</li>
